2009-03-26  Jaroslav Hajek  <highegg@gmail.com>

	* Array.cc (Array<T>::find): New method.
	* Array.h: Declare it.

2009-03-25  John W. Eaton  <jwe@octave.org>

	* EIG.cc (EIG::init (const Matrix&, bool),
	EIG::init (const Matrix&, const Matrix&, bool)):
	Avoid volatile declaration for tmp variable.

	* Makefile.in (MATRIX_INC): Add Sparse-diag-op-defs.h and
	Sparse-perm-op-defs.h to the list.

2009-03-25  Jaroslav Hajek  <highegg@gmail.com>
	
	* oct-inttypes.cc (INT_DOUBLE_BINOP_DECL (*, uint64),
	INT_DOUBLE_BINOP_DECL (*, int64)): x -> y where appropriate.

2009-03-25  Jaroslav Hajek  <highegg@gmail.com>

	* Array.cc (rec_permute_helper::use_blk): New field.
	(rec_permute_helper::blk_trans): New method.
	(rec_permute_helper::rec_permute_helper): Use smart reductions,
	detect possibility of using blocked transpose.
	(rec_permute_helper::do_permute): Use blocked transpose if possible.

2009-03-23  Jaroslav Hajek  <highegg@gmail.com>

	* idx-vector.cc (convert_index(double,...)): Simplify.

2009-03-21  Jaroslav Hajek  <highegg@gmail.com>

	* Array-d.cc: lo_ieee_isnan -> xisnan.
	* Array-f.cc: Ditto.
	* oct-inttypes.cc: Ditto.
	* oct-inttypes.h: Ditto.
	* CDiagMatrix.cc: Add missing include.
	* fCDiagMatrix.cc: Ditto.

2009-03-20  Jaroslav Hajek  <highegg@gmail.com>
	
	* CColVector.cc, CMatrix.cc, CNDArray.cc, CRowVector.cc, CSparse.cc,
	boolSparse.cc, dColVector.cc, dMatrix.cc, dNDArray.cc, dRowVector.cc,
	dSparse.cc, fCColVector.cc, fCMatrix.cc, fCNDArray.cc, fCRowVector.cc,
	fColVector.cc, fMatrix.cc, fNDArray.cc, fRowVector.cc, intNDArray.cc:
	Allow empty arrays in stream input operators.

2009-03-20  Jaroslav Hajek  <highegg@gmail.com>

	* Array.h (Array<T>::fastmap): New method.
	* dNDArray.cc (NDArray::isnan, NDArray::isinf, NDArray::isfinite):
	New methods.
	* dNDArray.h: Declare them.
	* fNDArray.cc (FloatNDArray::isnan, FloatNDArray::isinf,
	FloatNDArray::isfinite): New methods.
	* fNDArray.h: Declare them.